Enhanced style and UI/UX for mode 1 in main page including: \n> counter display now in separate box + arrow keys symbols below it to inform user how to increase/decrease speed --> arrow symbols change colors when arrow keys are pressed. \n> main text is now in a separate box too. Monospaced fonts' width invariance when bolded has been used to solve previous issue of text distortion when bolding words --> text now is fixed in place (no distortion). In this regard, added a list of 10 imported monospaced fonts in global.css. \n> changed .highlighted class in global.css to only define highlight color rather than bolding too. Created separate .bold class for the latter instead. Added .monospaced class to define the font-family too. The latter is used in mode-1-display.tsx. \n> Added a linked page when clicking on Quiz Button --> quiz yet to be implemented.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* List of imports for monospaced fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap'); /* Robot Mono */
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap'); /* Source Code Pro */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap'); /* Fira Code */
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap'); /* Space Mono */
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap'); /* JetBrains Mono */
+@import url('https://fonts.googleapis.com/css2?family=Cousine:wght@400;700&display=swap'); /* Cousine*/
+@import url('https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap'); /* Oxygen Mono */
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap'); /* Inconsolata */
+@import url('https://fonts.googleapis.com/css2?family=PT+Mono&display=swap'); /* PT Mono */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap'); /* Ubuntu Mono */
+
  
 html,
 body,
@@ -82,7 +95,14 @@ body,
 }
 
 .highlighted {
-  background-color: rgb(113, 113, 113);
+  background-color: rgb(165, 249, 232);
+}
+
+.monospaced {
+  font-family: 'Roboto Mono', monospace;
+}
+
+.bold {
   font-weight: bold;
 }
 
